# Odoo-projects

./: .gitignore  README_next_odoo_manager.md  README_odoo_manager.md  odoo_gui.sh  odoo_manager.sh  odoo_manager_web.py  odoo_next_gui.sh
.github/workflows/: build-desktop.yml
archive/bootstrap/: odoo_manager_bootstrap_legacy.html
docs/: REFACTORING_CROSS_PLATFORM.md
odoo-manager-next/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
odoo-manager-next/app/: globals.css  layout.tsx  page.tsx
odoo-manager-next/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  tabs.tsx  textarea.tsx
odoo-manager-next/src-tauri/: Cargo.toml  tauri.conf.json
odoo-manager-next/src-tauri/binaries/: README.md
odoo-manager-next/src-tauri/capabilities/: default.json
odoo-manager-next/src-tauri/icons/: icon.icns
odoo-manager-next/src-tauri/src/: lib.rs  main.rs
odoo_manager_core/: __init__.py  config.py  platform.py  project_service.py  system.py
scripts/: build_all_platforms.sh  build_desktop.py  build_local_desktop.sh  build_tauri_sidecar.py  macos_allow_private_build.sh
tests/: test_config.py  test_module_layout.py  test_platform.py  test_project_service.py  test_system.py
