[package]
name = "odoo-manager"
version = "0.1.1"
description = "Gestionnaire local de projets Odoo"
authors = ["Sudokeys"]
edition = "2021"

[lib]
name = "odoo_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
